tests/ui/basic/type_mismatch_binop.rs
use metamatch::eval;

fn main() {
    eval! {
        1 + "hello"
    };
}
